# Seedream-Imagegen

./: .env.example  .gitignore  AGENTS.md  AUDIT-AND-REMEDIATION-PLAN.md  CHANGELOG.md  CLAUDE.md  Changelog-2026-07-14-afternoon.md  Changelog-2026-07-14.md  Changelog-2026-07-15.md  Fix-Plan-2026-07-17.md  README-zh.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
references/: chroma-key.md  cli.md  lite.md  pro.md  prompting.md  sample-prompts.md  visual-examples.md
scripts/: image_gen.py  remove_chroma_key.py
skills/imagegen/: SKILL.md  requirements.txt
skills/imagegen/references/: capability-manifest.md  chroma-key.md  cli.md  lite.md  pro.md
skills/imagegen/scripts/: image_gen.py  remove_chroma_key.py
tests/: benchmark_remove_chroma_key.py  test_docs_contract.py  test_image_gen.py  test_remove_chroma_key.py
